# egui_nerdfonts

./: .gitignore  Cargo.toml  README.md
examples/: rust_logo.rs
fonts/: script.py
src/: lib.rs
src/variants/: mod.rs  regular.rs  regular_unique.rs
